--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -6,7 +6,8 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://github.com/boricua007" target="_blank">About</a>
+            @* <a href="https://github.com/boricua007" target="_blank">About</a> *@
+            <a href="/about" target="_blank">About</a>
         </div>
 
         <article class="content px-4">
