--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
     <main>
         <div class="top-row px-4">
             @* <a href="https://github.com/boricua007" target="_blank">About</a> *@
-            <a href="/about" target="_blank">About</a>
+            <NavLink href="about">About</NavLink>
         </div>
 
         <article class="content px-4">
